--- a/posts/201804.md
+++ b/posts/201804.md
@@ -108,19 +108,15 @@ Some hilarious promo by @jackliv3r: [one](https://twitter.com/jackliv3r/status/9
 
 ## Events
 
-Australia community [event](https://twitter.com/YBFVentures/status/984020375670546434) at YBF Ventures.
+Attended events:
 
-Wroclaw (Poland) [meetup](https://twitter.com/Donmario/status/984141287707348992).
-
-[BBQ](https://twitter.com/marco_peereboom/status/984525046738771968) with @scalarcapital team in Austin, USA.
-
-Blockchain Expo: Decred was well represented at this large-scale industry event in London, United Kingdom. Project Lead Jake took part in several interview and the Decred stand manned by community members was flooded with inquisitive visitors. ([video](https://www.pscp.tv/w/baimBTFXZ0tncUxubUxBRXZ8MWxEeExhYXBYWFFLbaBXRYqX7GSffVzoQEeMeIF16G7BLG9ZY809CKY0y6Wc), photo [1](https://twitter.com/decredproject/status/986642982194495488) [2](https://twitter.com/NoahPierau/status/987115181024141312) [3](https://twitter.com/NoahPierau/status/986925002833514497))
-
-First Decred meet-up in Hangzhou, China. ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073))
-
-Blockchain Sovereignty and Blockchain Integration for Businesses by Jake Yocom-Piatt at MIT Media Lab. ([event](https://events.technologyreview.com/presents/business-of-blockchain/2018), [reddit](https://www.reddit.com/r/decred/comments/8eds35/decred_team_at_the_mit_business_of_blockchain/), photo [1](https://twitter.com/DeCredBAB/status/988421816522891264) [2](https://twitter.com/DeCredBAB/status/988469881371799552) [3](https://twitter.com/marco_peereboom/status/988492457896742913))
-
-Cutting the Head off the Snake by Jake Yocom-Piatt, hosted by the Cambridge Blockchain Meetup. ([event](https://www.meetup.com/Cambridge-Blockchain/events/249275574/))
+* Australia community [event](https://twitter.com/YBFVentures/status/984020375670546434) at YBF Ventures.
+* Wroclaw (Poland) [meetup](https://twitter.com/Donmario/status/984141287707348992).
+* [BBQ](https://twitter.com/marco_peereboom/status/984525046738771968) with @scalarcapital team in Austin, USA.
+* Blockchain Expo: Decred was well represented at this large-scale industry event in London, United Kingdom. Project Lead Jake took part in several interview and the Decred stand manned by community members was flooded with inquisitive visitors. ([video](https://www.pscp.tv/w/baimBTFXZ0tncUxubUxBRXZ8MWxEeExhYXBYWFFLbaBXRYqX7GSffVzoQEeMeIF16G7BLG9ZY809CKY0y6Wc), photo [1](https://twitter.com/decredproject/status/986642982194495488) [2](https://twitter.com/NoahPierau/status/987115181024141312) [3](https://twitter.com/NoahPierau/status/986925002833514497))
+* First Decred meet-up in Hangzhou, China. ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073))
+* Blockchain Sovereignty and Blockchain Integration for Businesses by Jake Yocom-Piatt at MIT Media Lab. ([event](https://events.technologyreview.com/presents/business-of-blockchain/2018), [reddit](https://www.reddit.com/r/decred/comments/8eds35/decred_team_at_the_mit_business_of_blockchain/), photo [1](https://twitter.com/DeCredBAB/status/988421816522891264) [2](https://twitter.com/DeCredBAB/status/988469881371799552) [3](https://twitter.com/marco_peereboom/status/988492457896742913))
+* Cutting the Head off the Snake by Jake Yocom-Piatt, hosted by the Cambridge Blockchain Meetup. ([event](https://www.meetup.com/Cambridge-Blockchain/events/249275574/))
 
 Upcoming events:
 
@@ -132,33 +128,20 @@ Upcoming events:
 
 ## Media
 
-Second episode of Lightning Network educational series is out, exploring topics such as payment channels, onion routing, centralization risk, and challenges that still lie ahead. ([youtube](https://www.youtube.com/watch?v=QzY27b2REwg))
-
-A user’s perspective and introduction to blockchain governance ([Richard Red](https://medium.com/@richardred/a-users-perspective-and-introduction-to-blockchain-governance-80fbe2050222))
-
-The Importance of Governance: Analyzing the Aftermath of the Monero Hard Fork by Noah Pierau ([btcmanager.com](https://btcmanager.com/the-importance-of-governance-analyzing-the-aftermath-of-the-monero-hard-fork/))
-
-The Crypto Show w/ Marco from Decred ([youtube](https://www.youtube.com/watch?v=08g-8G-Ao4I))
-
-Interview with Jake at @Blockchain_Expo by Crypto Coin Growth ([youtube](https://www.youtube.com/watch?v=sPHgaJAli1M))
-
-Interview with Jake at @Blockchain_Expo by Cryptocurrency Academy ([youtube](https://www.youtube.com/watch?v=mYrwXQsc8yU))
-
-Alternative Blockchain Governance Systems With Jake & Kyle From Decred at @Blockchain_Expo by Crypto Disrupt ([youtube](https://www.youtube.com/watch?v=G07cTwprsS8))
-
-Decred Looks Ahead: An Interview with Project Lead Jake Yocom-Piatt (Exclusive) ([sludgefeed.com](https://sludgefeed.com/decred-looks-ahead-an-interview-with-project-lead-jake-yocom-piatt/))
-
-How Complex Bitcoin Politics Led to the Creation of Decred ([btcmanager.com](https://btcmanager.com/how-complex-bitcoin-politics-led-to-the-creation-of-decred/))
-
-Interview with Decred’s Project Lead Jake Yocom-Piatt on Crypto Ad Bans and Market Volatility ([cryptoslate.com](https://cryptoslate.com/interview-with-decreds-ceo-jake-yocom-piatt/))
-
-Decred’s Jonathan Zeppettini: The Industry Is Going To Be Displacing Wall Street ([blocktribune.com](http://blocktribune.com/decreds-jonathan-zeppettini-the-industry-is-going-to-be-displacing-wall-street/))
-
-On Chain VS. Off Chain Governance: The Ins And Outs ([coinjournal.net](https://coinjournal.net/on-chain-vs-off-chain-governance-the-ins-and-outs/))
-
-Decred: On true decentralisation, Bitcoin communities, and avoiding the ICO route \[Video\] ([blockchaintechnology-news.com](https://www.blockchaintechnology-news.com/2018/04/26/decred-on-true-decentralisation-bitcoin-communities-and-avoiding-the-ico-route-video/))
-
-Marco in shitcoin talk episode 54 ([youtube](https://www.youtube.com/watch?v=o5BPqBeARbQ&t=3183s))
+* Second episode of Lightning Network educational series is out, exploring topics such as payment channels, onion routing, centralization risk, and challenges that still lie ahead. ([youtube](https://www.youtube.com/watch?v=QzY27b2REwg))
+* A user’s perspective and introduction to blockchain governance ([Richard Red](https://medium.com/@richardred/a-users-perspective-and-introduction-to-blockchain-governance-80fbe2050222))
+* The Importance of Governance: Analyzing the Aftermath of the Monero Hard Fork by Noah Pierau ([btcmanager.com](https://btcmanager.com/the-importance-of-governance-analyzing-the-aftermath-of-the-monero-hard-fork/))
+* The Crypto Show w/ Marco from Decred ([youtube](https://www.youtube.com/watch?v=08g-8G-Ao4I))
+* Interview with Jake at @Blockchain_Expo by Crypto Coin Growth ([youtube](https://www.youtube.com/watch?v=sPHgaJAli1M))
+* Interview with Jake at @Blockchain_Expo by Cryptocurrency Academy ([youtube](https://www.youtube.com/watch?v=mYrwXQsc8yU))
+* Alternative Blockchain Governance Systems With Jake & Kyle From Decred at @Blockchain_Expo by Crypto Disrupt ([youtube](https://www.youtube.com/watch?v=G07cTwprsS8))
+* Decred Looks Ahead: An Interview with Project Lead Jake Yocom-Piatt (Exclusive) ([sludgefeed.com](https://sludgefeed.com/decred-looks-ahead-an-interview-with-project-lead-jake-yocom-piatt/))
+* How Complex Bitcoin Politics Led to the Creation of Decred ([btcmanager.com](https://btcmanager.com/how-complex-bitcoin-politics-led-to-the-creation-of-decred/))
+* Interview with Decred’s Project Lead Jake Yocom-Piatt on Crypto Ad Bans and Market Volatility ([cryptoslate.com](https://cryptoslate.com/interview-with-decreds-ceo-jake-yocom-piatt/))
+* Decred’s Jonathan Zeppettini: The Industry Is Going To Be Displacing Wall Street ([blocktribune.com](http://blocktribune.com/decreds-jonathan-zeppettini-the-industry-is-going-to-be-displacing-wall-street/))
+* On Chain VS. Off Chain Governance: The Ins And Outs ([coinjournal.net](https://coinjournal.net/on-chain-vs-off-chain-governance-the-ins-and-outs/))
+* Decred: On true decentralisation, Bitcoin communities, and avoiding the ICO route \[Video\] ([blockchaintechnology-news.com](https://www.blockchaintechnology-news.com/2018/04/26/decred-on-true-decentralisation-bitcoin-communities-and-avoiding-the-ico-route-video/))
+* Marco in shitcoin talk episode 54 ([youtube](https://www.youtube.com/watch?v=o5BPqBeARbQ&t=3183s))
 
 ## Community Discussions
 
