--- a/journal/201807.md
+++ b/journal/201807.md
@@ -44,7 +44,7 @@ There were also speculations about the mysterious [Pangolin miner](https://pango
 
 Meet new [stake pool](https://decred.org/stakepools/): [dcrpool.ibitlin.com](https://dcrpool.ibitlin.com/) has 1% fees and is hosted by [@life](https://decred.slack.com/team/UB0P8MNDA).
 
-An interesting detail about [decredbrasil.com](https://decredbrasil.com/stats) stake pool was posted in chat:
+An interesting detail about the [decredbrasil.com](https://decredbrasil.com/stats) stake pool was posted in chat:
 
 > emiliomann: stakebrasil is one of the pools with the lowest number of missed and expired tickets. It was one of the first and has a smaller percentage than the most recent ones who haven’t had the time to do so. (...) The Brazilian pool should be the one with the more servers spread around the world: 6 to decrease the latency. This is to explain to you why the \[pool fee\] rate of 5% (currently around 0.06 DCR) on the reward is also one of the highest.  
 > girino: 8 voting wallets now. I just finished setting up a new one yesterday. All of them in different datacenters, 3 in europe, 3 in north america, 1 in brazil and one in asia. We also have 3 more servers, 1 for the front end, one for "stats" and one for dcrdata. ([#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153166757139590QIHHB:decred.org))
