--- a/journal/201808.md
+++ b/journal/201808.md
@@ -98,6 +98,8 @@ Reddit and forum: Decred [cons](https://www.reddit.com/r/decred/comments/94ivq5/
 
 Chats: [plans](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153317267348142YycAs:decred.org) for contractor management system, lower-level decision making and contractor privacy vs transparency for stakeholders; [measuring](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153322272548457woVQD:decred.org) dev activity; [what if](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153323190548584msxmU:decred.org) the network stalls, multiple implementations of Decred for more resilience, long term vision behind those extensive tests and accurate comments in the codebase; [ideas](https://view.matrix.org/room/!tIDEIWechmqCLjPiui:decred.org/?anchor=$153327965848850tWxIW:decred.org) for workflow for policy and process documents, including ticket voting to approve their changes.
 
+casual mention of Stakey's origin story [in #politeia](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$153417266753907OhYwR:decred.org)
+
 An unusual event was the discussion of double negatives and other oddities in languages in [#trading](https://view.matrix.org/room/!zxBsqZRxjbQoLqJRwe:decred.org/?anchor=$153316263048081XBMww:decred.org).
 
 # Markets
